--- a/angular-practice/src/app/app.component.html
+++ b/angular-practice/src/app/app.component.html
@@ -6,3 +6,6 @@
 <!-- evnets -->
 <button (click)="onButtonclick($event)" > click me</button>
 <app-register></app-register>
+<router-outlet></router-outlet>
+<app-structural></app-structural>
+<app-employee-record></app-employee-record>
