--- a/angular-practice/src/app/app.component.html
+++ b/angular-practice/src/app/app.component.html
@@ -9,3 +9,4 @@
 <router-outlet></router-outlet>
 <app-structural></app-structural>
 <app-employee-record></app-employee-record>
+<app-operator></app-operator>
