--- a/angular-practice/src/app/register/register.component.html
+++ b/angular-practice/src/app/register/register.component.html
@@ -9,6 +9,14 @@
      
     </div>
     <div class="form-group">
+      <label for="exampleInputEmail1">Unique key:</label>
+      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Name" formControlName="userUniqueKey">
+      <br>
+      <span style="color:red" *ngIf="userName && userName.invalid && userName.touched">field is required</span>
+      <br>
+     
+    </div>
+    <div class="form-group">
       <label for="exampleInputPassword1">Password:</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="userPassword">
       <br>
