--- a/angular-practice/src/app/app.component.html
+++ b/angular-practice/src/app/app.component.html
@@ -9,4 +9,5 @@
 <router-outlet></router-outlet>
 <app-structural></app-structural>
 <app-employee-record></app-employee-record>
-<app-operator></app-operator>
+<!-- <app-operator></app-operator> -->
+<app-users></app-users>
